--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "Hello Koa 2 example with async",
   "main": "app.js",
   "scripts": {
-      "start": "node src/app.js"
+    "start": "node src/app.js"
   },
   "keywords": [
-      "koa",
-      "async"
+    "koa",
+    "async"
   ],
   "author": "Y",
   "license": "Apache-2.0",
   "dependencies": {
-      "koa": "2.0.0",
-      "koa-router": "7.0.0",
-      "koa-bodyparser": "3.2.0"
+    "koa": "2.0.0",
+    "koa-bodyparser": "3.2.0",
+    "koa-router": "7.0.0"
+  },
+  "devDependencies": {
+    "axios": "^0.24.0"
   }
 }
