--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-router": "7.0.0"
   },
   "devDependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "mongoose": "^6.1.0"
   }
 }
