--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa": "2.0.0",
     "koa-bodyparser": "3.2.0",
     "koa-router": "7.0.0",
+    "koa2-cors": "^2.0.6",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
