--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "koa": "2.0.0",
-    "koa-bodyparser": "3.2.0",
+    "koa-body": "^4.2.0",
     "koa-router": "7.0.0",
+    "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "nodemon": "^2.0.15"
   },
